feat: implement production-ready test isolation and infrastructure
This commit implements comprehensive test isolation fixes and production-ready infrastructure:

## Test Isolation & Framework Improvements
- Fix database initialization isolation by moving to init_app() functions
- Add TESTING=1 environment variable to control service initialization
- Implement proper test environment setup with OTEL_ENABLE=0
- Fix import paths in all test files to use full module paths
- Add authentication bypass for tests with ALLOW_INSECURE_LOCAL=1
- Create comprehensive E2E test framework with testcontainers
- Add test_idempotency_and_dlq.py for event processing validation
- Add test_probe_failures.py for health check failure scenarios
- Fix pytest configuration with proper pythonpath setup

## Production Infrastructure Enhancements
- Add Horizontal Pod Autoscalers (HPA) for all services
- Implement Pod Disruption Budgets (PDB) for high availability
- Add comprehensive network policies for security isolation
- Create External Secrets integration for secure credential management
- Add Kafka lag monitoring with kafka-lag-exporter
- Implement security hardening with Pod Security Standards
- Add performance testing framework with K6 smoke tests
- Create Prometheus alerting rules for DLQ monitoring
- Add ServiceMonitors for comprehensive observability

## Code Quality & Linting
- Fix all linting issues identified by Ruff
- Organize imports according to Python standards
- Remove unused imports and clean up code formatting
- Add proper error handling and logging throughout services
- Implement production-ready CORS and security configurations

## CI/CD & Deployment
- Update GitHub Actions workflow for comprehensive testing
- Add multi-stage testing pipeline (unit, integration, E2E)
- Implement proper test isolation in CI environment
- Add security scanning and vulnerability checks
- Create staging deployment configuration with Kustomize

## Documentation & Security
- Update security har

--- a/infra/docker/kong/kong.yml
+++ b/infra/docker/kong/kong.yml
@@ -48,4 +48,9 @@ plugins:
     config:
       allowed_payload_size: 10
   - name: bot-detection
+  - name: jwt
+    config:
+      claims_to_verify: ["exp"]
+      key_claim_name: iss
+      secret_is_base64: false
 
