--- a/infra/k8s/analytics-deployment.yaml
+++ b/infra/k8s/analytics-deployment.yaml
@@ -12,9 +12,25 @@ spec:
       labels:
         app: analytics
     spec:
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: analytics
           image: ghcr.io/your-org/analytics:latest
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop: ["ALL"]
+            readOnlyRootFilesystem: true
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
           ports:
             - containerPort: 8000
           livenessProbe:
