--- a/infra/k8s/identity-deployment.yaml
+++ b/infra/k8s/identity-deployment.yaml
@@ -12,9 +12,25 @@ spec:
       labels:
         app: identity
     spec:
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: identity
           image: ghcr.io/your-org/identity:latest
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop: ["ALL"]
+            readOnlyRootFilesystem: true
+          resources:
+            requests:
+              cpu: "50m"
+              memory: "64Mi"
+            limits:
+              cpu: "200m"
+              memory: "128Mi"
           ports:
             - containerPort: 8000
           env:
